--- a/koodi/viikko2/project-reader/pyproject.toml
+++ b/koodi/viikko2/project-reader/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "verkkokauppa-haku"
+name = "project-reader"
 version = "0.1.0"
 description = ""
 authors = ["Kalle Ilves <kalle.ilves@helsinki.fi>"]
